UKMCAB-1837: user account column spacing fix

--- a/src/UKMCAB.Web.UI/assets/scss/views/user-management.scss
+++ b/src/UKMCAB.Web.UI/assets/scss/views/user-management.scss
@@ -1,5 +1,5 @@
 @mixin datetime-col-desktop {
-    width: 9.5em;
+    width: 9.25em;
 }
 
 @mixin email-col-desktop {
@@ -50,6 +50,11 @@
 
             th:nth-child(4) {
                 @include datetime-col-desktop;
+                padding-left: 15px;
+            }
+
+            td:nth-child(7) {
+                padding-left: 20px;
             }
         }
 
@@ -68,10 +73,15 @@
 
             th:nth-child(4) {
                 width: 5.75em;
+                padding-left: 15px;
             }
 
             th:nth-child(5) {
                 @include datetime-col-desktop;
+            }
+
+            td:nth-child(7) {
+                padding-left: 20px;
             }
         }
 
